--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>BarterDEX</title>
     <!-- vendor stylesheets -->
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Unica+One:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,700" rel="stylesheet">
     <link href="http://vjs.zencdn.net/6.2.4/video-js.css" rel="stylesheet">
     <!-- HRM or production stylesheet (see ./app/index.jsx) -->
     <link id="css-bundle" rel="stylesheet" type="text/css" href="../dist/style.css">
